--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.datasource.password:
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+
+spring.security.oauth2.client.registration.google.client-id=929203548061-no061dftv652em16a1049jnhfu966qn2.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.scope=email,profile
